# console-column-file-manager

./: .gitignore  ColumnFileManager.csproj  ImageSharpProxy.cs  LICENSE  Program.cs  THIRD-PARTY-NOTICES.txt  memo.txt
.superpowers/brainstorm/3060-1781181913/content/: edge-cases.html  file-type-capabilities.html  preview-layout.html
.superpowers/brainstorm/3060-1781181913/state/: server-stopped
.superpowers/brainstorm/33-1781427723/content/: search-ui-v2.html  search-ui-v3.html  search-ui.html
.superpowers/brainstorm/33-1781427723/state/: server-stopped
ColumnFileManager.Tests/: ColumnFileManager.Tests.csproj  FileTypeDetectorTests.cs  HeaderParserTests.cs  HexFormatterTests.cs  ImagePreviewTests.cs  NavigationTests.cs  SearchMatchTests.cs  SearchStatusBarTests.cs  VideoPreviewTests.cs
docs/superpowers/plans/: 2026-06-14-quick-search.md
docs/superpowers/specs/: 2026-06-11-preview-system-design.md  2026-06-14-quick-search-design.md  2026-06-22-leap-navigation-design.md
sample_image_viewer/rust_console_imgview/: Cargo.toml  README.md
sample_image_viewer/rust_console_imgview/src/: main.rs
