[package]
name = "rust_console_imgview"
version = "0.1.0"
edition = "2024"

[dependencies]
image = "0.25"
crossterm = "0.28"
chrono = "0.4"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = "abort"     # Abort on panic
strip = true        # Strip symbols from binary
